deployments/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-ecommerce
  namespace: ecommerce
  labels:
    app: be-ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be-ecommerce
  template:
    metadata:
      labels:
        app: be-ecommerce
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1001
      containers:
        - name: be-ecommerce
          image: giabaodocker/be.ecommerce:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: be-ecommerce-volume
              mountPath: /app/wwwroot/policy.csv
              subPath: policy.csv
              readOnly: false
            - name: be-ecommerce-volume
              mountPath: /app/wwwroot/model.conf
              subPath: model.conf
          livenessProbe:
            #  Kiểm tra điểm cuối /healthz của ứng dụng web trên cổng 8081.
            #Nếu điểm cuối này không phản hồi (hoặc phản hồi với trạng thái khác 2xx hoặc 3xx), Kubernetes sẽ khởi động lại container.
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 60
            # Thời gian chờ trước khi thực hiện probe lần đầu tiên.
            periodSeconds: 10
            # Thời gian giữa các lần kiểm tra tiếp theo.
          readinessProbe:
            # Kiểm tra điểm cuối /ready của ứng dụng web trên cổng 8081.
            # Nếu điểm cuối này không phản hồi, container sẽ được coi là chưa sẵn sàng và sẽ không nhận lưu lượng.
            httpGet:
              path: /ready
              port: 8081
            initialDelaySeconds: 30
            # Thời gian chờ trước khi thực hiện probe lần đầu tiên.
            periodSeconds: 10
            # Thời gian giữa các lần kiểm tra tiếp theo.
      volumes:
        - name: be-ecommerce-volume
          configMap:
            name: be-ecommerce-config
